# ChangeLog for media-sound/banshee
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/banshee/ChangeLog,v 1.149 2012/04/09 14:49:49 maekke Exp $

  09 Apr 2012; Markus Meier <maekke@gentoo.org> banshee-2.2.1.ebuild:
  x86 stable, bug #407701

  31 Mar 2012; Pacho Ramos <pacho@gentoo.org> banshee-2.4.0-r1.ebuild:
  Works fine with media-libs/musicbrainz:3 instead of deprecated :1 as just
  tested.

*banshee-2.4.0-r1 (26 Mar 2012)

  26 Mar 2012; Pacho Ramos <pacho@gentoo.org> +banshee-2.4.0-r1.ebuild,
  +files/banshee-2.4.0-libgpod-082.patch, +files/banshee-2.4.0-upnp-crash.patch,
  -banshee-2.4.0.ebuild:
  Fix UPnP crash and build with libgpod-sharp-0.8.2 (#409597 by Bjoern
  Ottervik).

*banshee-2.4.0 (24 Mar 2012)

  24 Mar 2012; Pacho Ramos <pacho@gentoo.org> +banshee-2.4.0.ebuild:
  Version bump.

  28 Nov 2011; Pacho Ramos <pacho@gentoo.org> banshee-2.2.1.ebuild:
  Fix dependencies: drop old GVER stuff that didn't make any sense with the way
  we provide gst plugins, gnomevfs was replaced by gio time ago, gvfs[ios] is
  needed with USE 'ios', rename 'ipod' to 'ios' USE flag. Thanks a lot to leio
  for his help.

*banshee-2.2.1 (21 Nov 2011)

  21 Nov 2011; Pacho Ramos <pacho@gentoo.org> +banshee-2.2.1.ebuild,
  -banshee-2.0.0.ebuild, metadata.xml:
  Version bump, this also handles bpmdetect dependency properly (bug #284036,
  thanks to Colin Macdonald, Mart Raudsepp, Paweł Hajdan, Jr and others), and
  fixes notifications (bug #387569 by Travis Hansen).

  05 Nov 2011; Markos Chandras <hwoarang@gentoo.org> banshee-2.2.0-r1.ebuild:
  Stable on amd64 wrt bug #389181

  04 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> banshee-2.2.0-r1.ebuild:
  x86 stable wrt bug #389181

*banshee-2.2.0-r1 (01 Nov 2011)

  01 Nov 2011; Pacho Ramos <pacho@gentoo.org> +banshee-2.2.0-r1.ebuild,
  +files/banshee-2.2.0-fix-equalizer-values.patch, -banshee-2.0.1.ebuild,