@@ -10,13 +10,17 @@ DIST banshee-2.2.1.tar.xz 3084484 RMD160 47b5ae9538306b27e6cc6288c61a94a1a1b7210
 DIST banshee-2.4.0.tar.xz 3188320 RMD160 8aab4639441fef50471e2b3c0449132fe9720a8d SHA1 b8aa9fe752866adb5a25449e6fda60e2538e1605 SHA256 a993bd02e4bbe6b92943558d52bec42938d27b013c2fe287e9a5ac1f5c7fea03
 EBUILD banshee-2.2.0-r1.ebuild 3921 RMD160 2bd22a762dad23fab06190fa604e85474b668a52 SHA1 76d677cfe932e159d2e9484aa1995feadf7e148b SHA256 63f4681873254de5504020652bc1b780a734f3c9cc6bb757aff2678ebb272689
 EBUILD banshee-2.2.1.ebuild 4012 RMD160 b5b2db12d57b5df553e287b5cf1a896d8d1b9dc8 SHA1 48698164b621ccae3e7a82c49bdcc3d857312200 SHA256 f32fbb48fc41c1c91c81e164bfcf68a3a78e0755b88799485039b84031595487
-EBUILD banshee-2.4.0-r1.ebuild 4023 RMD160 ac80b5bea99e2c99f80191c0434efddcd63422e5 SHA1 b668cdef630d08557158e008a5b88a5782aefbab SHA256 ddbd26b18e33e945f5829f85aeb6379aa9571024a4063d60a3ac4f87104a554d
-MISC ChangeLog 28170 RMD160 70552d3ea04cb9ea6b32f3da589e6056c407476d SHA1 469225ea11ebe4e72d9121c4a20436acaf3bf945 SHA256 1f0b6588079dfa16ee008a5c359a145a82f99c561988a14c3d3c66d44e180a2e
+EBUILD banshee-2.4.0-r1.ebuild 4004 RMD160 b27d632041b9d645cf623fb54bf459c58e023623 SHA1 8973a4470517068b94a8cdf4a839ff851e7d035e SHA256 15f8a5eca107bf5041717f7b0da598f4ecbf0129fc4d173de5dc61c70153bfd8
+MISC ChangeLog 28375 RMD160 eb21b695cda99706bf6d8478f80905ff8592a4d7 SHA1 5001dcfd77ab0181caec0b8aad9947c27d5c78e7 SHA256 b63981e0b465be24dc23c8caf1f180dde8728647a3a46a01052f9b0e614cc0c0
 MISC metadata.xml 698 RMD160 95a11b2d382d5c91b411829fe455b733ecea1228 SHA1 414284c191fdfadcf7b8ed4b0839a539ff850cca SHA256 fdccdd9d76ee8b2de867fad022cc51569cf5932e8ddf4b1eba263f0add1f4973
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAk+C97wACgkQkKaRLQcq0GI8mwCfbphThWwsBjWGk+Fm70WFZyMx
-YjQAnA4c0GzJPb5jRuXFEIhzUkzh1KEi
-=lhVf
+iQEcBAEBAgAGBQJPlE0IAAoJEEdUh39IaPFN/KUH+gPMBIX75jNVBz5RcRrkfYWi
+iuA8JRygU+0mpf7EGCGy2cxfGnL7ejwLccTwLbcBgPFQ70WnodOsG1lJEQ81LV5S
+2tpFGjZFieJprFeaZ11TP9wYVFtDe5dH3zO5Os75rP7UHRY7lC/+9pIIy2l+5mmo
+Z1i+8YCoqfRY8w/agSWFoqch4Sx5AbYeW1GnUnvirYtv1i4hnWy3504FBA6NwsMb
+V5kbP8FNAJFNHLZOfMgWnhQ/h0km+aIs7rJrV5ivGTgInv5gz4opOKPHPA/p/h5V
+AHQwQcSXgUa6Pn1lRTrr4Fd0YTHX71tfvIZ8MeV5VEGc8zvJdSFYtQKkTycU4Wo=
+=oRS2
 -----END PGP SIGNATURE-----
