@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/banshee/banshee-2.4.0-r1.ebuild,v 1.2 2012/03/31 15:49:02 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/banshee/banshee-2.4.0-r1.ebuild,v 1.3 2012/04/22 18:26:45 ssuominen Exp $
 
 EAPI="4"
 
@@ -12,7 +12,7 @@ HOMEPAGE="http://banshee.fm/"
 LICENSE="MIT"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="+aac +cdda +bpm boo daap doc +encode ios karma mtp test udev +web youtube"
+IUSE="+aac +cdda +bpm boo daap doc +encode ipod karma mtp test udev +web youtube"
 
 RDEPEND=">=dev-lang/mono-2.4.3
 	gnome-base/gnome-settings-daemon
@@ -54,10 +54,7 @@ RDEPEND=">=dev-lang/mono-2.4.3
 		media-plugins/gst-plugins-lame:0.10
 		media-plugins/gst-plugins-taglib:0.10
 	)
-	ios? (
-		>=media-libs/libgpod-0.8.2[mono]
-		gnome-base/gvfs[ios]
-	)
+	ipod? ( >=media-libs/libgpod-0.8.2[mono] )
 	mtp? (
 		>=media-libs/libmtp-0.3.0
 	)
@@ -120,7 +117,7 @@ src_configure() {
 		$(use_enable boo) \
 		$(use_enable mtp) \
 		$(use_enable daap) \
-		$(use_enable ios appledevice) \
+		$(use_enable ipod appledevice) \
 		$(use_enable karma) \
 		$(use_enable web webkit) \
 		$(use_enable youtube) \
