@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/banshee
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/banshee/ChangeLog,v 1.149 2012/04/09 14:49:49 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/banshee/ChangeLog,v 1.150 2012/04/22 18:26:45 ssuominen Exp $
+
+  22 Apr 2012; Samuli Suominen <ssuominen@gentoo.org> banshee-2.4.0-r1.ebuild:
+  Rename USE="ios" to USE="ipod" which is designed for controlling libgpod
+  dependency wrt #413105 by Daniel Klaffenbach
 
   09 Apr 2012; Markus Meier <maekke@gentoo.org> banshee-2.2.1.ebuild:
   x86 stable, bug #407701
